Set menu item link top padding to px (in place of em); this fixes the issue where the submenu jumped when mousing over the parent item's menu icon.

--- a/themes/base/jquery.ui.menu.css
+++ b/themes/base/jquery.ui.menu.css
@@ -26,7 +26,7 @@
 .ui-menu .ui-menu-item a {
 	text-decoration:none;
 	display:block;
-	padding:.2em .4em;
+	padding: 2px .4em;
 	line-height:1.5;
 	zoom:1;
 	font-weight: normal;
